Fixed mobile layout issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -121,7 +121,7 @@ textarea.inputArea {
 @media (max-width:1480px) {
 	div.main, div.panel {
 		max-width: 80vw;
-		min-width: 60vw;
-		margin: 2vw 14.5vw;
+		min-width: 80vw;
+		margin: 2vw 4vw;
 	}
 }
